--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1546,7 +1546,7 @@ h3 {
 #block-views-lesson-collection-block-3,
 #block-views-lesson-collection-block-4{
     float:left;
-    margin: 44px 0 85px;
+    margin: 24px 0 85px;
     width: 940px;
 }
 
@@ -2092,7 +2092,7 @@ div.jp-audio{
 .keywords{
   @extend #classResources;
   color: $colorRed;
-   margin-bottom: 0;
+   margin-bottom: 20px;
     padding-bottom: 10px;
     padding-top: 10px;
     font-size: 13px;  
