--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2007,7 +2007,7 @@ h3 a {
 #block-views-lesson-collection-block-3,
 #block-views-lesson-collection-block-4 {
   float: left;
-  margin: 44px 0 85px;
+  margin: 24px 0 85px;
   width: 940px;
 }
 
@@ -2775,7 +2775,7 @@ div.jp-audio {
 /* line 2092, ../sass/style.scss */
 .keywords {
   color: #9c1f19;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   padding-bottom: 10px;
   padding-top: 10px;
   font-size: 13px;
