--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -769,9 +769,9 @@ ul.masonry{
 #teachingsBarInnerWrapper{
   padding-bottom:3px!important;
 }
-#teachersDDtext {
-    margin-left: 0;
-}
+// #teachersDDtext {
+//     margin-left: 0;
+// }
 #topicDDtext{
     margin-left: 10px;
 }
