--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -632,33 +632,23 @@ background-color:#653a24;
     overflow: hidden;
     width: 300px;
     & a{
-        cursor: pointer;
     overflow: hidden;
     width: 300px;
     }
 }
-.contWrapper{
-    @extend .imagesCont
-}
-.imagesCont img, .contWrapper img {
+.imagesCont img {
     float: left;
     height: 170px;
     width: 300px;
     z-index: -10;
 }
-.descCont{
+.theDescCont{
     background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
     float: left;
-    height: 180px;
-    margin-top: -59px;
     padding-top: 5px;
-    width: 300px;
 }
-.theDescCont {
-    @extend .descCont
-}
-.jsonTitle {
-    padding-bottom: 4px;
+.theJsonTitle {
+    padding-bottom: 0px; 
     display: block;
     color: $colorBrown;
     font-size: 15px;
@@ -669,12 +659,16 @@ background-color:#653a24;
     text-transform: uppercase;
     width: 280px;
 }
-.theJsonTitle{
-    @extend .jsonTitle;
-    margin-top: 0px;
-}
-span.jsonTitle {
-    padding-bottom: 0;
+.teachingsTopicAndDate {
+    font-size: 12px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-bottom: 10px;
+    color: $colorBrown;
+    display: inline-block;
+    width: 283px; 
+    text-transform: capitalize;
+    float: left;
 }
 .teachingsTopicAndDate {
     font-size: 12px;
@@ -683,14 +677,9 @@ span.jsonTitle {
     padding-bottom: 10px;
     color: $colorBrown;
     display: inline-block;
-    width: 286px;
-}
-.theDate {
-    @extend .teachingsTopicAndDate;
-    width: auto;
-}
-.teachingsTopicAndDate.freeLesson{
-  width: auto;
+    width: 283px; 
+    text-transform: capitalize;
+    float: left;
 }
 /*** adding icon for free lesson ***/
 
@@ -715,18 +704,17 @@ span.jsonTitle {
 .teachingsTopicAndDate .Free{
   line-height: 17px;
 }
-.teaser {
+.theTeaser {
     color: $colorBrown;
     display: block;
     font-size: 14px;
     margin-left: 10px;
     margin-right: 10px;
     text-align: left;
+    float: left;
+    width: 280px;
 }
-.theTeaser{
-    @extend .teaser
-}
-.teaser p,.theTeaser p {
+.theTeaser p {
     display: block;
     font-size: 14px;
     line-height: 20px;
@@ -769,9 +757,6 @@ ul.masonry{
 #teachingsBarInnerWrapper{
   padding-bottom:3px!important;
 }
-// #teachersDDtext {
-//     margin-left: 0;
-// }
 #topicDDtext{
     margin-left: 10px;
 }
