--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -670,17 +670,6 @@ background-color:#653a24;
     text-transform: capitalize;
     float: left;
 }
-.teachingsTopicAndDate {
-    font-size: 12px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-bottom: 10px;
-    color: $colorBrown;
-    display: inline-block;
-    width: 283px; 
-    text-transform: capitalize;
-    float: left;
-}
 /*** adding icon for free lesson ***/
 
 .Free:before{
@@ -2238,7 +2227,7 @@ div.jp-audio{
     width: 16px;
     float: left;
     margin-right: 7px;
-    margin-top: 1px;
+    margin-top: 11px;
     @include icon-sprite("video");
 }
 .Videos{
@@ -2271,14 +2260,12 @@ div.jp-audio{
 .Both{
 	@extend .bothAdVdImg;
 }
-.theTitle,.titleWrapper {
+.theTitle{
     float: left;
     margin-left: 10px;
-    margin-top: 10px;
 }
 .teachersPath,.readMore{
     color: #127795;
-    margin-left: 5px; 
 }
 .rightArrowStyleHome{
     position: relative;
