--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1000,7 +1000,7 @@ h1#page-title {
     font-size: 30px;
     font-weight: normal;
     line-height: 24px;
-    margin-right: 20px;
+    margin-right: 47px;
     text-transform: uppercase;
     width: 700px;
 }
@@ -2152,12 +2152,12 @@ div.jp-audio{
     text-transform: capitalize;
     color: #127795;
 }
-#mainContentWrapper h1#page-title, 
-#courseByParentWrapper h1#page-title {
-    margin-top: 47px;
-    width: 940px;
-    float: none;
-}
+// #mainContentWrapper h1#page-title, 
+// #courseByParentWrapper h1#page-title {
+//     margin-top: 47px;
+//     width: 940px;
+//     float: none;
+// }
 .topicItemImage a {
     height: auto !important;
     text-decoration: none !important;
