--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -996,7 +996,7 @@ ul.masonry{
 }
 h1#page-title {
     color: $colorTitle;
-    float: left;
+    // float: left;
     font-size: 30px;
     font-weight: normal;
     line-height: 24px;
