--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1000,9 +1000,9 @@ h1#page-title {
     font-size: 30px;
     font-weight: normal;
     line-height: 24px;
-    margin-right: 47px;
+    margin-top: 47px;
     text-transform: uppercase;
-    width: 700px;
+    // width: 700px;
 }
 h2 {
     font-size:30px; 
