--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -1289,9 +1289,8 @@ h1#page-title {
   font-size: 30px;
   font-weight: normal;
   line-height: 24px;
-  margin-right: 47px;
+  margin-top: 47px;
   text-transform: uppercase;
-  width: 700px;
 }
 
 /* line 1007, ../sass/style.scss */
