--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1620,6 +1620,9 @@ h3 {
     line-height: 26px;
     text-transform: capitalize;
 }
+#topicCourseTitle {
+    display: inline !important;
+}
 #topicCourse{
     font-size: 15px;
     line-height: 26px;
