--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2288,7 +2288,7 @@ div.jp-audio{
 .preVideoImg #pipe,
 .preVideoImg #primaryTopicMultimedia,
 .preVideoImg #authorNameMultimedia,
-.preVideoImg #authorNameMultimedia a;
+.preVideoImg #authorNameMultimedia a,
 .preVideoImg #dateMultimedia{
     color: $colorWhite;
 }
