--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -37,8 +37,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: $fontFace;
-    -webkit-font-smoothing: antialiased;
-  
+    -webkit-font-smoothing: antialiased; 
 }
 p {
     font-weight: normal;
@@ -259,8 +258,7 @@ ul li {
     width: 280px;
   margin-top: 34px;
   margin-left: 40px;
-  display: block;
- /* This needs to be set or some font faced fonts look bold on Mac. */    
+  display: block;    
 }
 .slidesSubTitle{
     font-family: $fontFaceLight;
@@ -273,7 +271,6 @@ ul li {
     margin-top: 9px;
   margin-left: 40px;
   display: block;
- /* This needs to be set or some font faced fonts look bold on Mac. */
 }
 .slidesBody{
     font-family: $fontFaceLight;
@@ -285,7 +282,6 @@ ul li {
     margin-top: 8px;
   margin-left: 40px;
   display: block;
- /* This needs to be set or some font faced fonts look bold on Mac. */
 }
 .slidesBody p{
   font-family: $fontFaceLight;
@@ -303,7 +299,6 @@ ul li {
   width: 280px;
   text-decoration: none;
   margin-left: 20px;
- /* This needs to be set or some font faced fonts look bold on Mac. */
 }
 .slidesReadMore a:hover {
     color:$colorWhite;
@@ -828,7 +823,6 @@ ul.masonry{
 .authors_name {
     color: #999999;
     cursor: pointer;
-    //font-family: ProxiRegular;
     font-size: 28px;
     line-height: 28px;
     margin-left: 10px;
@@ -996,13 +990,11 @@ ul.masonry{
 }
 h1#page-title {
     color: $colorTitle;
-    // float: left;
     font-size: 30px;
     font-weight: normal;
     line-height: 24px;
     margin-top: 47px;
     text-transform: uppercase;
-    // width: 700px;
 }
 h2 {
     font-size:30px; 
@@ -1215,14 +1207,7 @@ h3 {
     text-transform:uppercase;
     margin: 48px 0 12px;
 }
-// .title {
-//     font-weight:normal; 
-//     font-size:30px;
-//     line-height: 24px;
-//     color:$colorParagraph;
-//     text-align:left;
-//     text-transform:uppercase;
-// }
+
 /****************END Text editor styles****************/
 
 /****************Multimedia pages**********************/
@@ -1296,7 +1281,6 @@ h3 {
     position: absolute;
     top: 0;
 }
-
 #optionVideo #eSocial{
     float: right;
     border: none;
@@ -1460,7 +1444,7 @@ h3 {
 }
 #ac-1 ~ .accordion, #ac-0 ~ .accordion  {
     height: 0;
-    overflow: auto; //hidden
+    overflow: auto;
     transition: height 0.3s ease-in-out 0s;
 }
  #classHighlights input:checked ~ .accordion, #classesDescription input:checked ~ .accordion { 
@@ -2120,8 +2104,7 @@ div.jp-audio{
     padding-bottom: 7px;
     text-align: left;
     text-transform: uppercase;
-    width: inherit;
-  
+    width: inherit; 
 }
 .topicTermnDate {
     font-size: 12px;
@@ -2140,12 +2123,6 @@ div.jp-audio{
     text-transform: capitalize;
     color: #127795;
 }
-// #mainContentWrapper h1#page-title, 
-// #courseByParentWrapper h1#page-title {
-//     margin-top: 47px;
-//     width: 940px;
-//     float: none;
-// }
 .topicItemImage a {
     height: auto !important;
     text-decoration: none !important;
@@ -2241,7 +2218,6 @@ div.jp-audio{
 .Both{
 	@extend .bothAdVdImg;
 }
-
 .teachingsTopicAndDate .Premium, 
 .teachingsTopicAndDate .Basic {
     margin-right: 0;
