--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -779,8 +779,8 @@ ul.masonry{
     color: #8B8888;
     font-size: 16px;
     line-height: 28px;
-    margin-top: 3px!important;
-    margin-bottom: 2px!important;
+    // margin-top: 3px!important;
+    // margin-bottom: 2px!important;
     padding-left: 18px;
     text-align: left;
 }
@@ -796,10 +796,10 @@ ul.masonry{
 #teachingResultSection .carousel .ulStyle {
     padding: 0;
 }
-#teachingResultSection .imagesCont a {
-    height: auto !important;
-    text-decoration: none !important;
-}
+// #teachingResultSection .imagesCont a {
+//     height: auto !important;
+//     text-decoration: none !important;
+// }
 .jsonTitle a {
     color: #433A3A;
     font-size: 15px;
@@ -1558,7 +1558,7 @@ h3 {
     font-size: 14px;
     line-height: 26px;
     text-transform: uppercase;
-    text-decoration: none;
+    // text-decoration: none;
     display: block;
 }
 .priceLogin a {
@@ -1786,7 +1786,7 @@ h3 {
 .lessonCollectionSection table thead tr a{
     font-size: 12px;
     color: $colorRed; 
-    text-align: left;
+    // text-align: left;
     font-weight: normal!important;
     background: none!important
 }
