--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2213,8 +2213,7 @@ div.jp-audio{
 .Both{
 	@extend .bothAdVdImg;
 }
-.teachingsTopicAndDate .Premium, 
-.teachingsTopicAndDate .Basic {
+.teachingsTopicAndDate .Premium{
     margin-right: 0;
     margin-top: 0;
 }
