add style for user welcome message

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -219,7 +219,12 @@ ul li {
     min-width: 100%;
     width: 100%;
 }
-
+#headerSearch {
+    float: right;
+    font-size: 13px;
+    margin-top: 2px;
+    text-align: right;
+}
 /*================== END LOCAL MENU ============================= */
 
 /* ================= END HEADER ================================= */
