--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -225,6 +225,9 @@ ul li {
     margin-top: 2px;
     text-align: right;
 }
+.not-logged-in #headerSearch{
+  margin-top: 10px;
+}
 /*================== END LOCAL MENU ============================= */
 
 /* ================= END HEADER ================================= */
