--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -224,6 +224,7 @@ ul li {
     font-size: 13px;
     margin-top: 2px;
     text-align: right;
+    text-transform: capitalize;
 }
 .not-logged-in #headerSearch{
   margin-top: 11px;
