--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3081,7 +3081,7 @@ div.jp-audio {
     padding-left: 0px !important;
   }
 }
-@media only screen and (min-width: 980px) {
+@media screen and (max-width: 980px) {
   /* line 2338, ../sass/style.scss */
   #outerMenu ul li {
     margin: 0 3px;
