--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2334,7 +2334,7 @@ div.jp-audio{
 		padding-left: 0px!important;
 	}
 }
-@media screen and (max-width: 980px){
+@media screen (max-width: 980px){
   #outerMenu ul li{
     margin: 0 3px;
   }
