--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -134,7 +134,7 @@ ul li {
     @extend .donate;
     display: none;
     font-size: 12px !important;
-    margin: 4px 20px 0;
+    margin: 4px 20px 0 10px;
 }
 #headerLinks .region-universalmenu{
     float: left;
