--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1620,6 +1620,12 @@ h3 {
 #infoCourse{
     line-height: 25px;
 }
+
+.eventsLocation,.eventsDate{
+  margin-top: 5px;
+}
+
+
 .lessonCollectionSection h2{
     font-size: 21px;
     color: $colorRed;
