--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1385,9 +1385,15 @@ h3 {
     width: 70%;
     float: left;
 }
+.node-type-live-events #wrapperInfoMultimedia {
+    width: 65%;
+}
 #wrapperAuthorDate {
     float: left;
     width: 30%;
+}
+.node-type-live-events #wrapperAuthorDate {
+    width: 35%;
 }
 .pipe{
     margin: 0 20px;
