--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1364,6 +1364,9 @@ h3 {
     color:$colorBrown;
     text-align:left;
 }
+#wrapperInfoMultimedia a{
+    color:$colorBrown;
+}
 #primaryTopicMultimedia, .pipe{
     font-family: $fontFaceLight ;
     font-weight:normal; 
