--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1366,6 +1366,7 @@ h3 {
 }
 #wrapperInfoMultimedia a{
     color:$colorBrown;
+    text-decoration: underline;
 }
 #primaryTopicMultimedia, .pipe{
     font-family: $fontFaceLight ;
