--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1504,6 +1504,8 @@ h3 {
     margin: auto;
     width: 940px;
 }
+.lessonCollectionSection,
+.liveEventCollectionSection,
 #block-views-lesson-collection-block, 
 #block-views-lesson-collection-block-1,
 #block-views-lesson-collection-block-2,
@@ -1644,6 +1646,8 @@ h3 {
     text-align: left;
     margin-bottom: 16px; 
 }
+.liveEventCollectionSection .view-filters,
+.lessonCollectionSection .view-filters,
 #block-views-lesson-collection-block .view-filters,
 #block-views-lesson-collection-block-1 .view-filters,
 #block-views-lesson-collection-block-2 .view-filters,
