--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1641,7 +1641,8 @@ h3 {
 }
 
 
-.lessonCollectionSection h2{
+.lessonCollectionSection h2,
+.liveEventCollectionSection h2{
     font-size: 21px;
     color: $colorRed;
     text-align: left;
