--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1688,7 +1688,8 @@ h3 {
     display: inline;
     margin-right: 10px;
 }
-.lessonCollectionSection table {
+.lessonCollectionSection table,
+.liveEventCollectionSection table {
     width: 940px!important;
     font-size: 15px;
     line-height: 30px;
