--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1700,11 +1700,13 @@ h3 {
 .activeLesson {
     font-weight: normal;
 }
-.view-content thead {
+.lessonCollectionSection thead,
+.liveEventCollectionSection thead {
     float: left;
     width: 940px;
 }
-.view-content tbody {
+.lessonCollectionSection tbody,
+.liveEventCollectionSection tbody {
     max-height: 300px;
     overflow-x: hidden;
     overflow-y: auto;
@@ -1713,48 +1715,70 @@ h3 {
     border-top: none;
     border-bottom: 1px solid #CCCCCC;
 }
-.view-content tbody tr,.view-content thead tr {
+.lessonCollectionSection tbody tr,
+.lessonCollectionSection thead tr,
+.liveEventCollectionSection tbody tr,
+.liveEventCollectionSection thead tr {
     display: inline-block;
     width: 940px;
 }
 .lessonCollectionSection table thead tr th:nth-child(1),
-.lessonCollectionSection table tbody tr td:nth-child(1){
+.lessonCollectionSection table tbody tr td:nth-child(1),
+.liveEventCollectionSection table thead tr th:nth-child(1),
+.liveEventCollectionSection table tbody tr td:nth-child(1){
   width: 34px;
 }
 .lessonCollectionSection table tbody tr td:nth-child(2),
-.lessonCollectionSection table thead tr th:nth-child(2){
+.lessonCollectionSection table thead tr th:nth-child(2),
+.liveEventCollectionSection table tbody tr td:nth-child(2),
+.liveEventCollectionSection table thead tr th:nth-child(2){
   width: 509px;
 }
 .lessonCollectionSection table thead tr th:nth-child(3),
-.lessonCollectionSection table tbody tr td:nth-child(3) {
+.lessonCollectionSection table tbody tr td:nth-child(3),
+.liveEventCollectionSection table thead tr th:nth-child(3),
+.liveEventCollectionSection table tbody tr td:nth-child(3){
     width: 65px;
 }
 .lessonCollectionSection table tbody tr td:nth-child(3),
 .lessonCollectionSection table tbody tr td.release-width,
-.lessonCollectionSection table tbody tr td.duration-width{
+.lessonCollectionSection table tbody tr td.duration-width,
+.liveEventCollectionSection table tbody tr td:nth-child(3),
+.liveEventCollectionSection table tbody tr td.release-width,
+.liveEventCollectionSection table tbody tr td.duration-width{
 	font-size:13px;
 }
-.lessonCollectionSection table tbody tr td.author-width{
+.lessonCollectionSection table tbody tr td.author-width,
+.liveEventCollectionSection table tbody tr td.author-width{
 	font-size:15px;
 }
-.lessonCollectionSection .cols-7 th:nth-child(2){
+.lessonCollectionSection .cols-7 th:nth-child(2),
+.liveEventCollectionSection .cols-7 th:nth-child(2){
 		width: 453px!important;
 }
 .lessonCollectionSection .cols-7 th:nth-child(3),
-.author-width{
+.author-width,
+.liveEventCollectionSection .cols-7 th:nth-child(3){
 		width: 100px!important;
 }
 .lessonCollectionSection table thead tr th:nth-child(4),
 .lessonCollectionSection table thead tr th:nth-child(5),
 .lessonCollectionSection table tbody tr td:nth-child(4),
-.lessonCollectionSection table tbody tr td:nth-child(5) {
+.lessonCollectionSection table tbody tr td:nth-child(5),
+.liveEventCollectionSection table thead tr th:nth-child(4),
+.liveEventCollectionSection table thead tr th:nth-child(5),
+.liveEventCollectionSection table tbody tr td:nth-child(4),
+.liveEventCollectionSection table tbody tr td:nth-child(5){
     width: 74px;
 }
 .lessonCollectionSection table thead tr th:last-child,
-.lessonCollectionSection table tbody tr td:last-child{
+.lessonCollectionSection table tbody tr td:last-child,
+.liveEventCollectionSection table tbody tr th:last-child,
+.liveEventCollectionSection table tbody tr td:last-child{
   width: 110px;
 }
-.lessonCollectionSection table tbody tr td.title-width{
+.lessonCollectionSection table tbody tr td.title-width,
+.liveEventCollectionSection table tbody tr td.title-width{
 	width:450px!important;
 }
 .tablescroll_wrapper {
@@ -1763,11 +1787,13 @@ h3 {
     width: 940px!important;
     overflow-x: hidden!important;
 }
-.lessonCollectionSection table thead tr{
+.lessonCollectionSection table thead tr,
+.liveEventCollectionSection table thead tr{
     border-top: 1px solid $colorGray;
     border-bottom: 1px solid $colorGray;
 }
-.lessonCollectionSection table thead tr th{
+.lessonCollectionSection table thead tr th,
+.liveEventCollectionSection table thead tr th{
     padding-right:0px; 
 }
 .Video{
@@ -1800,34 +1826,43 @@ h3 {
      background: url(http://cdn1.kabbalah.com/university/icons/cc_icon_dark_grey.png) no-repeat 8px 9px;
       }
 }
-.lessonCollectionSection table thead tr th.views-field-twistage-subtitles{
+.lessonCollectionSection table thead tr th.views-field-twistage-subtitles,
+.liveEventCollectionSection table thead tr th.views-field-twistage-subtitles{
     background: none!important;
     color: $colorRed!important;
 }
-.lessonCollectionSection table thead tr th{
+.lessonCollectionSection table thead tr th,
+.liveEventCollectionSection table thead tr th{
     border-bottom: none;
 }
-.lessonCollectionSection table thead tr th img{
+.lessonCollectionSection table thead tr th img,
+.liveEventCollectionSection table thead tr th img{
     margin-left: 5px;
 }
-.lessonCollectionSection table thead tr th.views-align-left{
+.lessonCollectionSection table thead tr th.views-align-left,
+.liveEventCollectionSection table thead tr th.views-align-left{
     font-weight: normal!important;
 }
 .lessonCollectionSection table thead tr,
-.lessonCollectionSection table thead tr a{
+.lessonCollectionSection table thead tr a,
+.liveEventCollectionSection table thead tr,
+.liveEventCollectionSection table thead tr{
     font-size: 12px;
     color: $colorRed; 
     font-weight: normal!important;
     background: none!important
 }
-.lessonCollectionSection table td a{
+.lessonCollectionSection table td a,
+.liveEventCollectionSection table td a{
     color: #127795;
     font-size: 14px;
 }
-.lessonCollectionSection table td.active{
+.lessonCollectionSection table td.active,
+.liveEventCollectionSection table td.active{
     background: none;
 }
-.lessonCollectionSection .view-lesson-collection span{
+.lessonCollectionSection .view-lesson-collection span,
+.liveEventCollectionSection .view-lesson-collection span{
     display: block;
 }
 #edit-field-portion-tid-wrapper label,
