--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1723,9 +1723,7 @@ h3 {
     width: 940px;
 }
 .lessonCollectionSection table thead tr th:nth-child(1),
-.lessonCollectionSection table tbody tr td:nth-child(1),
-.liveEventCollectionSection table thead tr th:nth-child(1),
-.liveEventCollectionSection table tbody tr td:nth-child(1){
+.lessonCollectionSection table tbody tr td:nth-child(1){
   width: 34px;
 }
 .lessonCollectionSection table tbody tr td:nth-child(2),
